--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -43,7 +43,7 @@ header:
 
 footer:
   copyright:
-    notice: '© {year} Me. This work is licensed under {license}'
+    notice: '© {year} Kiran Vaidhya Venkadesh. This work is licensed under {license}. Telescope icons created by Freepik - Flaticon.'
     license:
       enable: true
       allow_derivatives: false
