--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -18,7 +18,7 @@ marketing:
     site_type: Person
     local_business_type: ''
     org_name: ''
-    description: 'Researcher in medical image analysis'
+    description: 'Co-founder, CTO at Plain Medical'
     twitter: 'kiranvaidhya93'
   analytics:
     google_analytics: ''
